# experimental-osm-db

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
man/: manpage.template  osm2osr.md  osr2osm.md
src/: CMakeLists.txt  any_index.hpp  eodb.hpp  eodb_create.cpp  eodb_create_leveldb.cpp  eodb_dump.cpp  eodb_dump_leveldb.cpp  eodb_export.cpp  eodb_locations_cache.cpp  eodb_lookup.cpp  eodb_update.cpp  mapped_file.cpp  mapped_file.hpp  offset_index.hpp  options.hpp  osm2osr.cpp  osr2osm.cpp  updatable_disk_store.hpp
test/: classic_vs_leveldb.sh  create_and_update.sh
